--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.14.0",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "node-schedule": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
